0-nginx-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12-alpine
    ports:
    - containerPort: 80
