alpine-pod-2-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine-2-containers
  name: alpine-2-containers
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 10000
    image: alpine
    name: alpine1
    resources: {}
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 10000
    image: alpine
    name: alpine2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
