2-whoareyou-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-02-15T12:30:22Z"
  name: whoareyou-service
  namespace: default
  resourceVersion: "1343711"
  selfLink: /api/v1/namespaces/default/services/whoareyou-service
  uid: f8221615-bb4f-4b11-9f07-733eb53a155c
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: whoareyou
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
